@startuml ERD

' ENTITIES
entity users {
    id: int (PK)
    name: string
    email: string
    phone: string
    dob: date
    created_at: timestamp
    updated_at: timestamp
    deleted_at: timestamp
}

entity transactions {
    id: int(PK)
    trx_date: date
    type: enum{INCOME, EXPENSE}
    user_id: int (FK)
    source_id: int (FK)
    category_id: int (FK)
    amount: decimal
    purpose: string
    remark: string
    created_at: timestamp
    updated_at: timestamp
    deleted_at: timestamp
}

entity transaction_sources {
    id: int (PK)
    type: enum{INCOME, EXPENSE}
    name: string
    remark: string
}

entity transaction_categories {
    id: int (PK)
    type: enum{INCOME, EXPENSE}
    name: string
    remark: string
}

' RELATIONSHIPS
users ||--o{ transactions
transaction_sources ||--o{ transactions
transaction_categories ||--o{ transactions

@enduml